Fixed categories not displaying properly on mobile

--- a/app/assets/stylesheets/styles/sections.scss
+++ b/app/assets/stylesheets/styles/sections.scss
@@ -86,6 +86,7 @@
 	@extend %clearfix;
 	> div {
 		padding: 30px;
+		@extend %clearfix;
 		.lib-cat {
 			display: inline-block;
 			position: relative;
